--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -109,6 +109,7 @@
 	text-align: center;
 }
 .taskDescription {
+	cursor: pointer;
 	font-size: 20px;
 }
 /* <span class="taskDate">2022-01-20</span> */
@@ -116,4 +117,11 @@
 	text-decoration: underline;
 	float: left;
 	font-size: 22px;
+}
+
+.customModal {
+	color: black;
+}
+.modal-body {
+	color: black;
 }
