--- a/src/css/defaultStyles.css
+++ b/src/css/defaultStyles.css
@@ -13,7 +13,7 @@ body {
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 }
-#content {
+.content {
 	padding-top: 60px;
 	padding-bottom: 20rem;
 }
