Created an OOP Class
Created an OOP Class

--- a/src/css/defaultStyles.css
+++ b/src/css/defaultStyles.css
@@ -1,3 +1,4 @@
+/* This is basic styling for everything not concerning the main app */
 * {
 	font-family: 'Roboto', arial, helvetica, sans-serif;
 	margin: 0;
